<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!--Login Screen String Resources-->
    <string name="buttonLogin">Войти</string>
    <string name="textViewLogin">Логин</string>
    <string name="textViewPassword">Пароль</string>
    <string name="forgotPassword">Забыли пароль?</string>

    <!--Register Screen String Resources-->
    <string name="buttonRegister">Зарегистрироваться</string>
    <string name="textViewEnterLogin">Введите логин</string>
    <string name="textViewEnterPassword">Введите пароль</string>
    <string name="textViewEnterPhone">Введите телефон</string>
    <string name="textViewEnterEmail">Введите e-mail</string>
    <string name="google_icon_description">Google</string>
    <string name="checkBoxManDescription">Мужчина</string>
    <string name="checkBoxWomanDescription">Женщина</string>
    <string name="policy">Политика конфеденциальности</string>

    <!--Base Screen String Resources-->
    <string name="tabs_login">Войти</string>
    <string name="tabs_register">Регистрация</string>

    <!--Error dialog message-->
    <string name="error_bad_internet_connection">Проверьте подключение</string>
    <string name="error_empty_fields">Введите данные корректно</string>
    <string name="error_user_not_found">Такого пользователя нет?$#</string>
    <string name="error_wrong_password">Неверный пароль</string>
    <string name="error_user_already_exist">Такой логин уже занят</string>

</resources>